# n32r16

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  bug_report.md  config.yml  documentation.md  feature.md  feature_request.md
.github/workflows/: ci.yml
common/net/: CMakeLists.txt  mdns_helper.c  mdns_helper.h  mdns_support.c  tls_credentials.c  wifi_manager.c  wifi_manager.h  wifi_provisioner.c  wifi_sta.c  ws_client.c  ws_client.h  ws_client_core.c  ws_security.c  ws_security.h  ws_server.c  ws_server.h  ws_server_core.c
common/net/certs/: sensor_ws_server.crt  sensor_ws_server.key
common/net/include/: mdns_support.h  tls_credentials.h  wifi_provisioner.h  wifi_sta.h  ws_client_core.h  ws_server_core.h
common/net/tests/: test_mdns_helper.c  test_wifi_manager.c  test_ws_client.c  test_ws_security.c  test_ws_server.c
common/ota/: CMakeLists.txt  ota_update.c  ota_update.h
common/ota/tests/: test_ota_update.c
common/proto/: CMakeLists.txt  messages.c  messages.h  proto_codec.c  proto_crc32.c  proto_crc32.h
common/proto/include/: proto_codec.h  proto_crc32.h
common/proto/tests/: test_messages.c
common/security/: CMakeLists.txt  command_auth.c
common/security/include/: command_auth.h
common/util/: CMakeLists.txt  Kconfig  base32_utils.c  base32_utils.h  base64_utils.c  base64_utils.h  memory_profile.c  memory_profile.h  monotonic.c  monotonic.h  monotonic_clock.c  ringbuf.c  ringbuf.h  time_sync.c  time_sync.h  totp.c  totp.h
common/util/include/: monotonic_clock.h  ringbuf.h  time_sync.h
components/cert_store/: CMakeLists.txt  Kconfig  cert_store.c
components/cert_store/certs/: server_cert.pem  server_key.pem
components/cert_store/include/: cert_store.h
components/cjson/: CMakeLists.txt  cjson_helper.c  idf_component.yml
components/cjson/include/: cjson_helper.h
components/esp_lcd_panel_rgb/: CMakeLists.txt  esp_lcd_panel_rgb.c  esp_lcd_panel_rgb.h  esp_lcd_panel_rgb_driver.c
components/esp_lcd_panel_rgb/include/: esp_lcd_panel_rgb_driver.h
components/lvgl/: CMakeLists.txt  idf_component.yml  lvgl_port_config.c
components/lvgl/include/: lvgl_port_config.h
configs/esp32c3/: sdkconfig.defaults
configs/esp32s2/: sdkconfig.defaults
documentations/: demo_capture.md  hardware_wiring.md  installation_guide.md  release_and_testing.md  security_websocket_totp.md
documentations/compatibility/: mobile_validation.md
documentations/doxygen/: Doxyfile
documentations/hardware/: board_profiles.md
hmi_node/: CMakeLists.txt  Kconfig.projbuild  sdkconfig.ci.coverage  sdkconfig.defaults
hmi_node/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  app_main.h  board_waveshare7b_pins.h  data_model.c  data_model.h  prefs_store.c  prefs_store.h
hmi_node/main/display/: lvgl_port.c  lvgl_port.h  ui_locale.c  ui_locale.h  ui_screens.c  ui_screens.h
hmi_node/main/net/: ws_client.c  ws_client.h
hmi_node/main/tasks/: t_heartbeat.c  t_heartbeat.h  t_net_rx.c  t_net_rx.h  t_ui.c  t_ui.h
hmi_node/main/touch/: gt911.c  gt911.h
hmi_node/tests/: test_ui_events.c  test_ui_locale.c
partitions/: default_16MB_psram_32MB_flash_opi.csv  esp32c3_4MB.csv  esp32s2_8MB.csv
sensor_node/: CMakeLists.txt  Kconfig.projbuild  sdkconfig.ci.coverage  sdkconfig.defaults
sensor_node/configs/esp32c3/: sdkconfig.defaults
sensor_node/configs/esp32s2/: sdkconfig.defaults
sensor_node/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  board_pins.h  data_model.c  data_model.h  i2c_bus.c  i2c_bus.h  onewire_bus.c  onewire_bus.h  onewire_bus_manager.c  onewire_bus_manager.h
sensor_node/main/drivers/: bme280.c  bme280.h  ds18b20.c  ds18b20.h  mcp23017.c  mcp23017.h  pca9685.c  pca9685.h  sht20.c  sht20.h  tca9548a.c  tca9548a.h
sensor_node/main/io/: io_map.c  io_map.h
sensor_node/main/net/: ws_server.c  ws_server.h
sensor_node/main/security/: command_auth.c  command_auth.h
sensor_node/main/tasks/: t_heartbeat.c  t_heartbeat.h  t_io.c  t_io.h  t_sensors.c  t_sensors.h
sensor_node/main/tests/: i2c_mock.c  i2c_mock.h  onewire_mock.c  onewire_mock.h  test_data_model.c  test_ds18b20.c  test_mcp23017.c  test_pca9685.c  test_sht20.c
tests/: CMakeLists.txt
tests/e2e/: __init__.py  mock_gateway.py  mock_ota.py  mock_ws.py  proto.py  requirements.txt  test_end_to_end.py  test_ota_resilience.py  test_service_discovery.py  test_ws_handshake_vectors.py  test_ws_performance.py
tests/proto/: test_proto.c
tests/security/: test_command_auth.c
tests/util/: test_ringbuf.c
tools/: git-cliff.toml  run_coverage.py  ws_diagnostic.py
tools/release/: tag_version.py
